objects/SegmentLevel2Weighing__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>#Sprint16 #Marketing Lista de Segmentos y su ponderación</description>
    <fields>
        <fullName>Grouper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Define si el segmento es agrupador cuando haya segmento compuesto.
Ejemplo: Sólo Movil + Hogar = Hogar Convergente (agrupador)
Las familias de producto que tengan asignado Hogar deberán tener asignado también su agrupador para transformarlo en Hogar Convergente en caso que haya otro producto que no aplique al hogar.</description>
        <label>Agrupador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Nombre del Segmento a ponderar</description>
        <label>Segmento</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Weighing__c</fullName>
        <description>Ponderación del segmento</description>
        <label>Ponderación</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ponderación de Segmento</label>
    <listViews>
        <fullName>vista_de_flor</fullName>
        <columns>NAME</columns>
        <columns>Weighing__c</columns>
        <columns>Grouper__c</columns>
        <columns>Segment__c</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>vista de flor</label>
        <language>es</language>
    </listViews>
</CustomObject>